--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <activity android:name=".com.example.a2lavea02.mapping.MapChooseActivity" android:label="@string/selectmap"></activity>
         </activity>
+
     </application>
 
 </manifest>
