--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <activity android:name=".com.example.a2lavea02.mapping.MapChooseActivity" android:label="@string/selectmap"></activity>
+
+        </activity>
+        <activity android:name=".MapChooseActivity" android:label="@string/selectmap">
+
         </activity>
 
     </application>
